tests/language_modules/13_contract_blocks/valid/result_status_ensures.vf
module ResultStatusEnsures

error NotFound

function load(found: Boolean) returns Result<Integer, NotFound>
requires found = true
ensures success or failure
is
    return ok 1
end load

end ResultStatusEnsures