tests/language_modules/13_contract_blocks/invalid_semantics/requires_cannot_use_success.vf
module RequiresCannotUseSuccess

error NotFound

function load() returns Result<Integer, NotFound>
requires success
is
    return ok 1
end load

end RequiresCannotUseSuccess